// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <responsiveweb>
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<configweb__Base>
  <div
    className="css-view-1dbjc4n"
  >
    <responsiveweb__SliceContainer>
      <div
        className="css-view-1dbjc4n"
      >
        <responsiveweb__Base>
          <div
            className="css-view-1dbjc4n"
          >
            <responsiveweb__Base>
              <div
                className="css-view-1dbjc4n"
              >
                <div
                  className="css-text-901oao"
                >
                  lead
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div
                className="css-view-1dbjc4n"
              />
            </responsiveweb>
            <responsiveweb__SupportsContainer>
              <div
                className="css-view-1dbjc4n"
              >
                <responsiveweb>
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-1
                    </div>
                  </div>
                </responsiveweb>
                <responsiveweb>
                  <div
                    className="css-view-1dbjc4n"
                  >
                    <div
                      className="css-text-901oao"
                    >
                      support-2
                    </div>
                  </div>
                </responsiveweb>
              </div>
            </responsiveweb__SupportsContainer>
          </div>
        </responsiveweb__Base>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
